--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: ubuntu20.04
+name: Miui-rom
 
 # Controls when the action will run. 
 on:
@@ -42,7 +42,7 @@ jobs:
           
       - name: cloud189 yun
         run: |
-          git clone https://github.com/Aruelius/cloud189.git
+         git clone https://github.com/Dawnnnnnn/Cloud189.git
       
       - name: SSH connection to Actions
         uses: P3TERX/debugger-action@main
